fully implemented comment system

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -328,5 +328,11 @@ header a {
 	width: fit-content;
 }
 
+.messages-container {
+	height: fit-content;
+	max-height: 200px;
+	overflow: auto;
+}
+
 
 
