--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -324,9 +324,11 @@ header a {
 	color: white;
 }
 
-.small input, .small button {
+.small, .small input, .small button {
 	width: fit-content;
 }
+
+
 
 .messages-container {
 	height: fit-content;
